Fix skills section alignment

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -9,13 +9,19 @@
 }
 
 .skills {
-  columns: 1;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: start;
+  gap: 0.35rem 2rem;
+  padding-left: 1.25rem;
+  margin: 0 0 1.25rem;
+
   @media only screen and (min-width: 940px) {
-    columns: 2;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   li {
-    margin: 0;
+    margin: 0 !important;
     line-height: 1.75;
   }
 }
